--- a/team_data.yml
+++ b/team_data.yml
@@ -4,7 +4,7 @@
   name: "老寮工作坊"
   video: "https://www.youtube.com/watch?v=ixQE9RPnM-I"
   map: "miaoli"
-  location: "苗栗縣南庄鄉"
+  location: "苗栗縣"
   address: "苗栗縣南庄鄉南江村 22 鄰南江街 50 號"
   category: "藝術文化"
   since: "2014"
@@ -39,7 +39,7 @@
   name: "通霄二手市集"
   video: "https://www.youtube.com/watch?v=ixQE9RPnM-I"
   map: "miaoli"
-  location: "苗栗縣通霄鎮"
+  location: "苗栗縣"
   address: "苗栗縣通霄鎮"
   category: "社會創新"
   since: "2014"
@@ -70,7 +70,7 @@
   name: "蚵寮小搖滾"
   video: "https://www.youtube.com/watch?v=apugtMpjfEY"
   map: "kaohsiung"
-  location: "高雄市梓官區"
+  location: "高雄市"
   address: "高雄市梓官區蚵仔寮"
   category: "藝術文化"
   since: "2012"
@@ -89,7 +89,7 @@
   name: "Shoes Party 鞋靴派對"
   video: "https://www.youtube.com/watch?v=QvFcY4XxJoU"
   map: "changhua"
-  location: "彰化縣員林市"
+  location: "彰化縣"
   address: "彰化縣員林市"
   category: "生活工藝"
   since: "2007"
@@ -116,7 +116,7 @@
   name: "三源牧場"
   video: "https://www.youtube.com/watch?v=jwOtPEMQcIU"
   map: "yunlin"
-  location: "雲林縣林內鄉"
+  location: "雲林縣"
   address: "雲林縣林內鄉烏塗村"
   category: "在地滋味"
   since: "1985"
@@ -139,7 +139,7 @@
   name: "金詩達遙控車廠"
   video: "https://www.youtube.com/watch?v=Mfh-_YZnqsY"
   map: "taoyuan"
-  location: "桃園市蘆竹區"
+  location: "桃園市"
   address: "桃園市蘆竹區"
   category: "生活工藝"
   since: "2000"
@@ -162,7 +162,7 @@
   name: "宜蘭華德福"
   video: "https://www.youtube.com/watch?v=iQllRlftcBw"
   map: "yilan"
-  location: "宜蘭縣冬山鄉"
+  location: "宜蘭縣"
   address: "宜蘭縣冬山鄉"
   category: "社會創新"
   since: "1976"
@@ -212,7 +212,7 @@
   name: "甘丹創新"
   video: "https://www.youtube.com/watch?v=1llm1bQN5Qg"
   map: "tainan"
-  location: "台南市仁德區"
+  location: "台南市"
   address: "台南市仁德區成功里"
   category: "生活工藝"
   since: "2012"
@@ -278,7 +278,7 @@
   name: "胖地數位空間"
   video: "https://www.youtube.com/watch?v=1llm1bQN5Qg"
   map: "tainan"
-  location: "台南市中西區"
+  location: "台南市"
   address: "台南市中西區南門路21號"
   category: "社會創新"
   since: "2013"
@@ -394,7 +394,7 @@
   name: "見域工作室"
   video: "https://www.youtube.com/watch?v=ZyUxVyfclWk"
   map: "hsinchucity"
-  location: "新竹市北區舊城區"
+  location: "新竹市"
   address: "新竹市北區舊城區"
   category: "藝術文化"
   since: "2014"
@@ -437,7 +437,7 @@
   name: "Layoo 來喲"
   video: "https://www.youtube.com/watch?v=50pprMdqPhs"
   map: "tainan"
-  location: "台南市孔廟小巷內"
+  location: "台南市"
   address: "台南市中西區開山路122巷36弄15號"
   category: "生活工藝"
   since: "2012"
@@ -456,7 +456,7 @@
   name: "山不枯 Sanpuku"
   video: false
   map: "newtaipeicity"
-  location: "新北市坪林茶鄉"
+  location: "新北市"
   address: "新北市坪林茶鄉"
   category: "在地滋味"
   since: "2012"
@@ -487,7 +487,7 @@
   name: "多扶接送"
   video: "https://www.youtube.com/watch?v=DNWs6BJPD6w"
   map: "taipei"
-  location: "台北市文山區"
+  location: "台北市"
   address: "台北市文山區羅斯福路五段 195 號"
   category: "社會創新"
   since: "2009"
@@ -506,7 +506,7 @@
   name: "邦查有機農場"
   video: "https://www.youtube.com/watch?v=1GeiYTHBnYs"
   map: "hualien"
-  location: "花蓮光復鄉"
+  location: "花蓮光"
   address: "花蓮光復鄉馬太鞍部落"
   category: "在地滋味"
   since: "2008"
@@ -525,7 +525,7 @@
   name: "肉肉栽培研究所"
   video: false
   map: "kaohsiung"
-  location: "高雄市鳳山區"
+  location: "高雄市"
   address: "高雄市鳳山區中山西路364-1號16樓"
   category: "生活工藝"
   since: "2014"
@@ -613,7 +613,7 @@
   name: "人生百味"
   video: "https://www.youtube.com/watch?v=nSZnnD0Ab4Y"
   map: "taipei"
-  location: "台北市大稻埕"
+  location: "台北市"
   address: "台北市大稻埕"
   category: "社會創新"
   since: "2014"
@@ -951,7 +951,7 @@
   name: "天和鮮物"
   video: "https://www.youtube.com/watch?v=f0VrgyUaoVM"
   map: "penghu"
-  location: "澎湖縣西嶼鄉"
+  location: "澎湖縣"
   address: "澎湖縣西嶼鄉"
   category: "在地滋味"
   since: "2003"
@@ -1197,7 +1197,7 @@
   name: "花東菜市集"
   video: "https://www.youtube.com/watch?v=yx3y8b3gkaE"
   map: "hualien"
-  location: "花蓮縣吉安鄉"
+  location: "花蓮縣"
   address: "花蓮縣吉安鄉"
   category: "在地滋味"
   since: "2013"
@@ -1239,7 +1239,7 @@
   name: "舒喜巷"
   video: "https://www.youtube.com/watch?v=lCrbYjS1azA"
   map: "newtaipeicity"
-  location: "新北市板橋區"
+  location: "新北市"
   address: "新北市板橋區"
   category: "藝術文化"
   since: "2014"
@@ -1262,7 +1262,7 @@
   name: "Trois Boulangerie - 三毛烘培坊"
   video: false
   map: "kaohsiung"
-  location: "高雄市左營區"
+  location: "高雄市"
   address: "高雄市左營區"
   category: "在地滋味"
   since: "2014"
@@ -1281,7 +1281,7 @@
   name: "南投竹山新移民採茶班"
   video: "https://www.youtube.com/watch?v=YMFmf57SUQ4"
   map: "nantou"
-  location: "南投縣竹山鎮"
+  location: "南投縣"
   address: "南投縣竹山鎮"
   category: "在地滋味"
   since: "2008"
@@ -1385,7 +1385,7 @@
   name: "ATOM 3D"
   video: false
   map: "taipei"
-  location: "台北市中山區"
+  location: "台北市"
   address: "台北市中山區民生東路 2 段 122 號 2 樓"
   category: "生活工藝"
   since: "2012"
@@ -1404,7 +1404,7 @@
   name: "匠 tAKUMI 職人專門所"
   video: false
   map: "taipei"
-  location: "台北市中正區"
+  location: "台北市"
   address: "台北市中正區南昌路一段 126 巷 4 號 1 樓"
   category: "生活工藝"
   since: "2014"
@@ -1421,3 +1421,76 @@
       figure_en_name: "02"
       name: "楊禮謙"
       intro: "曾任職於日商擔任自動化控制的軟體工程師，具備獨立完成製鞋的開發生產能力。"
+-
+  en_name: "howxian"
+  slogan: "兩大三小的家庭，打造充滿歡笑無毒的友善蔬果農場"
+  name: "祥豪水耕教育農場 "
+  video: false
+  map: "changhua"
+  location: "彰化縣"
+  address: "彰化縣芳苑鄉頂廍村上林路頂廍段 183 巷 2 弄 136 號"
+  category: "在地滋味"
+  since: "2004"
+  website: ""
+  facebook_page: "http://on.fb.me/1CoJ8K3"
+  preface: "夫妻倆因為愛創立「祥豪水耕教育農場」，主要以水耕方式經營農場，用科技栽培系統與技術，能夠高生產無毒安全的友善食材。並且增加教育上附加價值的效益，還有視覺上的怡情景觀應用。"
+  member_amount: "一農場＋二農青＋三個小農夫"
+  member:
+    -
+      figure_en_name: "01"
+      name: "洪健彬"
+      intro: "彰化芳苑人，一個電腦工程師因為愛，放棄台北工程師的工作， 回到家鄉種起水耕蔬菜，就因為一股傻勁，果然種出不一樣的安全無毒的友善蔬果！"
+    -
+      figure_en_name: "02"
+      name: "張蕎瀅"
+      intro: "彰化員林人！當過立委和縣長的助理，有接收到一些關於農業上陳情案件，更知道農民的心聲，所以正努力去改善農民增加農民的高生產友善蔬果！"
+    -
+      figure_en_name: "03"
+      name: "洪祥豪"
+      intro: "小農夫 1 號，熱心＋愛心，有困難呼叫一聲，跟光速一樣伸出援手幫忙！"
+    -
+      figure_en_name: "04"
+      name: "洪瑞翊"
+      intro: "小農夫 2 號，專門唱歌給蔬果聽！"
+    -
+      figure_en_name: "05"
+      name: "洪維檍"
+      intro: "小農夫  3 號，小小小導覽員！"
+-
+  en_name: "macroglory"
+  slogan: "送貨司機辭掉穩定工作，研發出水管漏水警報器"
+  name: "光巨有限公司"
+  video: false
+  map: "taichung"
+  location: "台中市"
+  address: "台中市外埔區大馬路 408 號"
+  category: "社會創新"
+  since: "2013"
+  website: ""
+  facebook_page: "https://www.facebook.com/MacroGlory"
+  preface: "陽光、空氣、水是萬物生存三大條件，缺一不可。今年我國發生嚴重乾旱，停水議題吵得沸沸揚揚，但是卻沒人注意到管線漏水問題。他帶著自己有限的資金，投入水管漏水警報器的研發。"
+  member_amount: "一個年輕人，一間小公司"
+  member:
+    -
+      figure_en_name: "01"
+      name: "劉啟光"
+      intro: "研發產品、創立公司、市場開拓，全部都是由一個農村出身的年輕人一手包辦。雖然不被大部分的人看好，但是有幸的是能夠為自己的夢想跨出這一步。"
+-
+  en_name: "elephantfarm"
+  slogan: "離開編輯台，她將園藝治療帶來台灣"
+  name: "象山農場"
+  video: false
+  map: "taipei"
+  location: "台北市"
+  address: "台北市信義區"
+  category: "社會創新"
+  since: "2014"
+  website: ""
+  facebook_page: "https://www.facebook.com/GreathopeElmtfarm"
+  preface: "園藝治療簡單來說，就是用園藝調整、改善人的身、心、靈。讓人在了解植物、栽種植物的過程中，感受到植物的生命力，並得到成就感。強調建立人與大自然的良好關係，讓人能夠接受大自然的療癒能量。"
+  member_amount: "園藝治療師十人，管理員兩名"
+  member:
+    -
+      figure_en_name: "01"
+      name: "黃盛璘"
+      intro: "在 50 歲之前，是固執的金牛座，凡事相信毅力、耐力和意志力。50 歲之後，做一位助人者，發現只憑毅力、耐力和意志力是沒辦法幫助人的，得要先發展「同理心」。"
