--- a/team_data.yml
+++ b/team_data.yml
@@ -1564,6 +1564,103 @@
   member_amount: "一間果醬工作室，一個果醬男孩"
   member:
     -
-      figure_en_name: ""
+      figure_en_name: "01"
       name: "林韡勳"
       intro: "台南柳營一個小山村，有個 24 歲的男孩叫韡勳，因為想念兒時記憶中阿嬤製作的果醬，離開了台中城市，走訪台灣各地農場，開始找尋記憶中的水果味道，用果醬賦於在地水果新的價值。"
+-
+  en_name: "handinhand"
+  slogan: "結合「二手」與「手工」創作的愛好者，手手市集游牧全台"
+  name: "手_手"
+  video: "https://www.youtube.com/watch?v=xJtcxek8IOU"
+  map: "yunlin"
+  location: "雲林縣"
+  address: "雲林縣土庫鎮新庄里 182 號"
+  category: "藝術文化"
+  since: "2011"
+  website: ""
+  facebook_page: "https://www.facebook.com/handinhandmarket"
+  preface: "一群遍佈全台的台灣二手老品與手工創作愛好者，希望能夠有一個屬於年輕人的在地藝文市集，他們游牧台灣各地，集結了許多同好與充滿夢想的攤商。"
+  member_amount: "三位策辦人與全台各地協辦攤友"
+  member:
+    -
+      figure_en_name: "01"
+      name: "張軒瑋"
+      intro: "來自雲林縣，一個農業產值全國第一卻飽受工業污染成為空汙受害非常嚴重的地方。"
+    -
+      figure_en_name: "02"
+      name: "張宜翔"
+      intro: "家住台南，一個什麼東西都好吃，講話會加個膩的地方。"
+    -
+      figure_en_name: "03"
+      name: "高苑玲"
+      intro: "瑜珈很厲害。"
+-
+  en_name: "avanguard"
+  slogan: "在文化的前沿，用出版描繪島嶼的模樣"
+  name: "前衛出版社"
+  video: false
+  map: "taipei"
+  location: "台北市"
+  address: "台北市中山區農安街 153 號 4 樓之 3"
+  category: "藝術文化"
+  since: "1982"
+  website: "http://www.avanguard.com.tw/"
+  facebook_page: "https://www.facebook.com/AVANGUARDTaiwan"
+  preface: "前衛出版社成立於 1982 年，一貫秉持本土意識、人文精神、社會關懷的職志，公認是當今最具本土特色與台灣精神的專業出版機構。"
+  member_amount: "八個文字工作者、一個辦公室、一個倉庫"
+  member:
+    -
+      figure_en_name: "01"
+      name: "林文欽"
+      intro: "前衛出版社社長，1953 年出生，雲林縣崙背鄉人，文化大學中文系文藝組畢業。經歷：三民書局主編、台灣筆會秘書長、《台灣文藝》雜誌總編輯、《台灣新文化》雜誌社長、《台灣新文學》雜誌社長、建國黨與台灣北社發起人、台灣獨立建國聯盟成員。"
+-
+  en_name: "milk"
+  slogan: "九個熱血青年，一個農場，還有改變鮮奶產業的夢"
+  name: "鮮乳坊：小農鮮乳直送"
+  video: "https://www.youtube.com/watch?v=RDaGxjohZS8"
+  map: "changhua"
+  location: "彰化福寶"
+  address: "彰化福寶"
+  category: "在地滋味"
+  since: "2015 "
+  website: "http://ilovemilk.com.tw/"
+  facebook_page: "https://www.facebook.com/ilovepuremilk"
+  preface: "創辦鮮乳坊，讓平台成為改變鮮乳產業的第一步，鮮乳坊希望扮演消費者與酪農之間的橋樑，由獸醫師固定診斷乳牛健康，嚴格篩選合作牧場，消費者用消費的力量支持小農品牌，改變乳業生態，實現公平、健康的交易。"
+  member_amount: "9 個熱血青年，一個農場，還有改變鮮奶產業的夢"
+  member:
+    -
+      figure_en_name: "01"
+      name: "阿嘉"
+      intro: "做牛做馬獸醫師，每天在全台灣各地的牧場巡迴出診，不怕滿身牛屎的照顧數千頭乳牛的健康。雖然是台北人，卻更喜歡簡單的鄉下生活，想要用自己看到的故事，拉近都市和牧場的距離。"
+    -
+      figure_en_name: "02"
+      name: "灣灣"
+      intro: "台北出生住台北，曾經讀過三個大學四個科系，畢業後找了一份平凡的工作，過著平凡的人生，直到加入鮮乳坊，進入大人的世界後才發現，原來人生可以這麼有趣。"
+    -
+      figure_en_name: "03"
+      name: "郭佑"
+      intro: "生活在台北，骨子裡是 100% 台南人，從補教走到網拍業，網拍走到公益圈，最後選擇放下一切勇敢創業，卻意外跌得滿頭包。沉潛過後很快再次站起，因為我相信「當真心渴望一件事情時，全宇宙都會聯合起來幫你」"
+    -
+      figure_en_name: "04"
+      name: "Rose"
+      intro: "愛聊天、愛講話、愛交朋友、愛吃美食。夢想自己能跑遍世界各地、嘗遍各種美食，回台灣後加以融合，擁有各種特色餐廳。鮮乳坊讓我明白「理念對了，就會有人相信你、追隨你。」有對的產品、對的理念，燃燒自己也甘願！"
+    -
+      figure_en_name: "05"
+      name: "光頭"
+      intro: "曾經的客服以及訂單業務負責人，現職內勤總顧問，但轉職後的工作壓力不減反增，令人匪夷所思。曾經的年少輕狂，讓天靈蓋佛光普照，與外表大相逕庭的言行是其特色之一！立志離開繁華的都市，到鄉下享受片刻卻又永恆的悠閒。"
+    -
+      figure_en_name: "06"
+      name: "新莊梁朝偉"
+      intro: "曾經在水果攤打過工，所以被稱為水果哥。我的生活非常無聊，除了上班以外，幾乎是足不出戶的宅宅，直到我加入了鮮乳坊，我的人生改變了！因為鮮乳坊，我覺得我的人生充滿了希望。"
+    -
+      figure_en_name: "07"
+      name: "嘉千"
+      intro: "傳產業服務 11 年，已厭倦枯燥乏味的工作模式和食安問題、企業家剝削。因緣際會下加入鮮乳坊，我只能說活著真好！"
+    -
+      figure_en_name: "08"
+      name: "TK"
+      intro: "在大不列顛念完傳播研究碩士。小時候曾經以為只要穿上 Air Jordan 就自動變得會灌籃，長大後摸不到籃板，只好改行從事慢跑。雜食閱讀者、樂手，性情「不」溫和，平時靠拍攝小萌物調養身心。"
+    -
+      figure_en_name: "09"
+      name: "賴冠延"
+      intro: "從小就愛喝牛奶，最喜歡的動物也是牛，所以大家都叫我阿牛，因為沒有買到預購鮮乳，於是應徵成為送牛奶的小男孩，現在正式加入鮮乳坊大家庭，成為賣牛奶的小男孩！"
