--- a/team_data.yml
+++ b/team_data.yml
@@ -743,7 +743,7 @@
       intro: "國中學歷，清寒家庭，內心交織著改變命運的倔強和野心。"
 -
   en_name: "haihostel"
-  slogan: "不甘旅人覺得基隆無趣，一群年輕人創立背包客棧、規劃精采行程"
+  slogan: "不甘旅人覺得基隆無趣，一群年輕人創立生活概念館、規劃精采行程"
   name: "女巫國際背包客生活概念館"
   video: false
   map: "keelungcity"
