--- a/team_data_template.yml
+++ b/team_data_template.yml
@@ -14,22 +14,22 @@
   member_amount: ""
   member:
     -
-      figure_en_name: ""
+      figure_en_name: "01"
       name: ""
       intro: ""
     -
-      figure_en_name: ""
+      figure_en_name: "02"
       name: ""
       intro: ""
     -
-      figure_en_name: ""
+      figure_en_name: "03"
       name: ""
       intro: ""
     -
-      figure_en_name: ""
+      figure_en_name: "04"
       name: ""
       intro: ""
     -
-      figure_en_name: ""
+      figure_en_name: "05"
       name: ""
       intro: ""
