--- a/team_data.yml
+++ b/team_data.yml
@@ -1842,3 +1842,84 @@
       figure_en_name: "05"
       name: "醬油弟弟"
       intro: "黑豆養大的小孩，目前就讀中央大學研究所。御鼎興品牌概念者之一，參與御鼎興的網路經營與文案。"
+-
+  en_name: "grandpaslemon"
+  slogan: "孫子、孫女替阿公規劃網站，推廣自然農法栽植的香水檸檬"
+  name: "阿公的香水檸檬"
+  video: false
+  map: "pingtung"
+  location: "屏東縣"
+  address: "屏東縣"
+  category: "在地滋味"
+  since: "2014"
+  website: ""
+  facebook_page: "https://www.facebook.com/gradpaslemon"
+  preface: "大學開始關心土地的議題，對於栽種方式有所瞭解之後，我才知道阿公這種栽種的方式是自然農法，沒有使用化學的農藥和肥料，讓香水檸檬在完全自然的環境下生長，讓土地用本能養育生命，也讓香水檸檬生長出天然的樣子。"
+  member_amount: "一家人＋兩個朋友"
+  member:
+    -
+      figure_en_name: "01"
+      name: "阿公"
+      intro: "在屏東以自然農法耕作的郭阿公，以善待土地的方式栽種香水檸檬。"
+    -
+      figure_en_name: "02"
+      name: "郭博裕"
+      intro: "阿公的乖孫子，在竹科工作，去年開始將屏東阿公的檸檬在網路上販售。"
+    -
+      figure_en_name: "03"
+      name: "郭雅惠"
+      intro: "阿公的乖孫女，用自己的設計專長，替阿公設計 LOGO。"
+-
+  en_name: "yunchen"
+  slogan: "出版一本好書，打造知識平台"
+  name: "允晨文化實業股份有限公司"
+  video: false
+  map: "taipei"
+  location: "台北市"
+  address: "台北市中山區南京東路三段 21 號 6 樓"
+  category: "藝術文化"
+  since: "1982"
+  website: "http://asianculture.com.tw/front/bin/home.phtml"
+  facebook_page: "https://www.facebook.com/yun.c.wenhua"
+  preface: "新光機構為倡導書香社會的建立，並參與文化傳承的耕耘，於 1982 年 11 月創立允晨文化出版公司，期能為國內文化知識傳播挹注一股源頭活水。"
+  member_amount: "八個人"
+  member:
+    -
+      figure_en_name: "01"
+      name: "廖志峰"
+      intro: "出生地台北市，居住地基隆市。淡江大學中文系畢，國立師範大學教育學分班結業，曾任廣告公司文案、國會助理、編輯，現供職於出版社。喜歡旅遊、看電影、漫步和攝影。"
+-
+  en_name: "cingshueilive"
+  slogan: "咖啡香與小旅遊，清水小鎮的老唱片行轉型成文化推廣基地"
+  name: "清水散步"
+  video: false
+  map: "taichung"
+  location: "台中市"
+  address: "台中市清水區文昌街 18 號"
+  category: "藝術文化"
+  since: "2012"
+  website: "http://www.hsabc.com.tw/"
+  facebook_page: "https://www.facebook.com/CingshueiLive"
+  preface: "來到清水散步，可以喝咖啡、吃手工麵線輕食料理，伴隨著書香與音樂聲，在這裡享受生活。清水散步致力於觀光文化旅遊推廣，更進一步以清水、海線等在地的文化元素，轉化成文創產業，發展出許多有特色的商品。"
+  member_amount: "熱愛清水的五人團隊"
+  member:
+    -
+      figure_en_name: "01"
+      name: "吳長錕"
+      intro: "清水散步主人，清水在地人，屏東農專獸醫系畢業後即返鄉經營唱片行、深耕地方，與好友創立台中縣古典音樂協會、牛罵頭文化協進會，累積三十年的藝文推廣與社區經營實務經驗；射手座的腦袋，創意變化多端、雖然年近花甲，但還是行動力十足，走在時代的尖端。"
+    -
+      figure_en_name: "02"
+      name: "明子"
+      intro: "屏東農專獸醫系畢業後就從台南府城嫁到清水，落地生根，常駐清水散步店內。想要了解最道地的清水故事、在地美食、小道消息，或是想要吃明子姊的私房菜，找明子姊就對了！"
+    -
+      figure_en_name: "03"
+      name: "燕子"
+      intro: "清水散步店長，清水在地人，從唱片行時代就已經在店內工作，精明幹練、做事極有效率，負責文創商品通路的經營與管理，乃是清水散步不可或缺的支柱。"
+    -
+      figure_en_name: "04"
+      name: "品寬"
+      intro: "清水在地人，金牛座務實的個性，從小耳濡目染之下，奠定了深厚的音樂和美感基礎，現就讀藝術管理與文化政策研究所中，負責音樂家經濟服務與音樂會節目規劃與行銷宣傳，平時藉由網路遠端討論與服務，經常會被徵召返鄉協助活動規劃與執行。"
+    -
+      figure_en_name: "05"
+      name: "萱珮"
+      intro: "團隊裡唯一不是清水人，但喜愛清水小鎮的風土民情。讀了好多年的人類學，快要從研究所畢業，因緣巧合之下來清水散步學習實務的經驗，喜歡傾聽、觀察人群、書寫故事，負責旅遊規劃、行旅玩家產業加盟、文創商品研發與行銷規劃等工作。"
