--- a/team_data.yml
+++ b/team_data.yml
@@ -1895,7 +1895,7 @@
     -
       figure_en_name: "01"
       name: "廖志峰"
-      intro: "出生地台北市，居住地基隆市。淡江大學中文系畢，國立師範大學教育學分班結業，曾任廣告公司文案、國會助理、編輯，現供職於出版社。喜歡旅遊、看電影、漫步和攝影。"
+      intro: "出生地台北市，居住地基隆市。淡江大學中文系畢，國立師範大學教育學分班結業，曾任廣告公司文案、國會助理、編輯，現供職於出版社。喜歡旅遊、看電影、漫步和攝影。著有《書，記憶著時光》。"
 -
   en_name: "cingshueilive"
   slogan: "咖啡香與小旅遊，清水小鎮的老唱片行轉型成文化推廣基地"
