--- a/team_data.yml
+++ b/team_data.yml
@@ -2114,3 +2114,49 @@
       figure_en_name: "01"
       name: "HANDOS"
       intro: "族繁不及備載，每一員全都是 HANDOS 的重要人物， 我們用盡全心全力，努力讓夢想從台灣出發。"
+-
+  en_name: "ahua"
+  slogan: "愛上這片土地，新住民用天然食材煮出台灣味"
+  name: "阿華肉羹"
+  video: "https://www.youtube.com/watch?v=xleDNBuF0Yg"
+  map: "newtaipeicity"
+  location: "新北市"
+  address: "新北市板橋區中山路二段 318 巷 27 弄 2 號"
+  category: "在地滋味"
+  since: "2008"
+  website: "http://bit.ly/1KlFXpa"
+  facebook_page: "http://on.fb.me/1KlFVNW"
+  preface: "憑著對台灣的由衷熱愛，她開創一家完全不使用化學的食材與調味品，皆以天然食材熬煮的小吃店。因為，這種經營方式，絕對是目前市面上所缺少的，且這樣可讓消費者吃的更安全、更安心。"
+  member_amount: "30 個座位的小吃店"
+  member:
+    -
+      figure_en_name: "01"
+      name: "覃忠華"
+      intro: "1974 年生於中國桂林，是個嫁到台灣近 20 年的新住民。"
+-
+  en_name: "waterhsichou"
+  slogan: "從護水運動到友善農產，溪州子弟復興稻作文化"
+  name: "溪州尚水友善農產"
+  video: "https://www.youtube.com/watch?v=L0QudqmsyPQ"
+  map: "changhua"
+  location: "彰化縣"
+  address: "彰化縣溪州鄉溪州村復興路 50 號"
+  category: "在地滋味"
+  since: "2013"
+  website: "http://water-farmer.com.tw/"
+  facebook_page: ""
+  preface: "溪洲護水運動告一段落之後，溪州子弟吳音寧和幾個在鄉青年一起成立了「溪州尚水農產公司」和農用書店。想透過更友善土地的生產方式、友善農民的產銷方式，來推廣溪州優質的農產品。"
+  member_amount: "五個年輕人，一間店面"
+  member:
+    -
+      figure_en_name: "01"
+      name: "吳音寧"
+      intro: "溪州子弟，圳寮村長大。現任溪州鄉公所主任秘書，曾經書寫過《江湖在哪裡？》、《白米不是炸彈》、《蒙面叢林》等書。"
+    -
+      figure_en_name: "02"
+      name: "巫宛萍"
+      intro: "南藝大建築所畢業，多年前到溪州來做社區營造，後來就離不開溪州了。現為農用書店之經營者。"
+    -
+      figure_en_name: "03"
+      name: "陳慈慧"
+      intro: "台大社會系畢業，也是多年前到到溪州工作，參與護水等等大小運動。現負責農產公司之運作。"
